# rag-chat

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: chat.py  documents.py  health.py
backend/app/auth/: dependencies.py  router.py
backend/app/core/: config.py
backend/app/db/: __init__.py  models.py
backend/app/ingestion/: chunker.py  interfaces.py  parsers.py
backend/app/llm/: interfaces.py  openai_provider.py
backend/app/retrieval/: chroma.py  interfaces.py
backend/app/workers/: ingest.py  queue.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_chunker.py  test_documents.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthForm.tsx  ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  CitationPanel.tsx  DocumentList.tsx  DocumentUpload.tsx  StatusBadge.tsx
frontend/lib/: api.ts  auth.ts
